--- a/Semester-3/20141108_hands_on/index.html
+++ b/Semester-3/20141108_hands_on/index.html
@@ -100,6 +100,7 @@
 	</section>
 
 	<section>
+		<h2>Parse this doucment</h2>
 		<div class="button-container">
 			<button type="button" onClick="parseDomTree();">Parse</button>
 			<button type="button" onClick="reset();">Reset</button>
