Further work on hands on

--- a/Semester-3/20141123_hands_on/webstorm_project/contact.html
+++ b/Semester-3/20141123_hands_on/webstorm_project/contact.html
@@ -15,6 +15,8 @@
     <link href='css/layout.css' rel='stylesheet' type='text/css'>
     <link href='css/contact/layout.css' rel='stylesheet' type='text/css'>
     <link href='css/contact/form.css' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/print.css">
+    <link rel="stylesheet" href="css/contact/print.css">
 </head>
 <body>
 <div class="page-main-area">
@@ -90,6 +92,8 @@
     <p>
         &copy; Webdesign &amp; -prgorammierung
     </p>
+    <a id="print" class="print-link" href="#" onclick="window.print();return false;"/>
+    <a id="email" class="email-link" href="#" onclick="mailto:test@test.at"/>
 </footer>
 </body>
 </html>
