--- a/Semester-3/20141123_hands_on/webstorm_project/infos.html
+++ b/Semester-3/20141123_hands_on/webstorm_project/infos.html
@@ -13,6 +13,8 @@
     <link href='css/base.css' rel='stylesheet' type='text/css'>
     <link href='css/layout.css' rel='stylesheet' type='text/css'>
     <link href='css/info/layout.css' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/print.css">
+    <link rel="stylesheet" href="css/info/print.css">
 </head>
 
 <body>
@@ -69,6 +71,8 @@
     <p>
         &copy; Webdesign &amp; -prgorammierung
     </p>
+    <a id="print" class="print-link" href="#" onclick="window.print();return false;"/>
+    <a id="email" class="email-link" href="#" onclick="mailto:test@test.at"/>
 </footer>
 </body>
 </html>
