--- a/Semester-3/20141123_hands_on/webstorm_project/news.html
+++ b/Semester-3/20141123_hands_on/webstorm_project/news.html
@@ -44,9 +44,10 @@
 
 <div class="page-main-area">
     <section class="page-content">
-        <h2>News</h2>
-        <article>
+        <article id="news1">
             <h3>Artikel 1</h3>
+
+            <img src="images/article.jpg" alt="Article 3"/>
 
             <p>
                 Lorem ipsum dolor sit amet, <strong>consetetur</strong> sadipscing
@@ -61,8 +62,10 @@
                 amet.
             </p>
         </article>
-        <article>
+        <article id="news2">
             <h3>Artikel 2</h3>
+
+            <img src="images/article.jpg" alt="Article 3"/>
 
             <p>
                 Lorem <em>ipsum</em> dolor sit amet, consetetur sadipscing elitr,
@@ -76,8 +79,10 @@
                 gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
             </p>
         </article>
-        <article>
-            <h3>Artikel 2</h3>
+        <article id="news3">
+            <h3>Artikel 3</h3>
+
+            <img src="images/article.jpg" alt="Article 3"/>
 
             <p>
                 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
@@ -113,8 +118,10 @@
     <p>
         &copy; Webdesign &amp; -prgorammierung &amp;
     </p>
-    <a id="print" class="print-link" href="#" onclick="window.print();return false;"/>
-    <a id="email" class="email-link" href="#" onclick="mailto:test@test.at"/>
+
+    <div class=".link-container">
+        <a id="print" class="print-link" href="#" onclick="window.print();return false;"></a>
+        <a id="email" class="email-link" href="mailto:test@test.at"></a></div>
 </footer>
 </body>
 </html>
