--- a/Semester-3/20141123_hands_on/webstorm_project/index.html
+++ b/Semester-3/20141123_hands_on/webstorm_project/index.html
@@ -44,53 +44,43 @@
 
 <div class="page-main-area">
     <section class="page-content">
-        <h2>News</h2>
-        <article>
-            <h3>Artikel 1</h3>
-
-            <p>
-                Lorem ipsum dolor sit amet, <strong>consetetur</strong> sadipscing
-                elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
-                magna aliquyam erat, sed diam voluptua. At vero eos et accusam et
-                justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-                takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor
-                sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
-                invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-                At vero eos et accusam et justo duo dolores et ea rebum. Stet clita
-                kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit
-                amet.
-            </p>
-        </article>
-        <article>
-            <h3>Artikel 2</h3>
-
-            <p>
-                Lorem <em>ipsum</em> dolor sit amet, consetetur sadipscing elitr,
-                sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
-                aliquyam erat, sed diam voluptua. At vero eos et accusam et justo
-                duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
-                sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet,
-                consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
-                ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero
-                eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
-                gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-            </p>
-        </article>
-        <article>
-            <h3>Artikel 2</h3>
-
-            <p>
-                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                diam nonumy eirmod tempor invidunt ut labore et dolore magna
-                aliquyam erat, sed diam voluptua. At vero eos et accusam et justo
-                duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
-                sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet,
-                consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
-                ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero
-                eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
-                gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-            </p>
-        </article>
+        <div class="teaserbox">
+            <article>
+                <a href="news.html#news1">
+                    <h3>Artikel 1</h3>
+                    <img src="images/article.jpg" alt="Article 1"/>
+                    Lorem ipsum dolor sit amet, <strong>consetetur</strong> sadipscing
+                    elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
+                    magna aliquyam erat, sed diam voluptua. At vero eos et accusam et
+                    justo duo dolores et ea rebum. Stet clita kasd gubergren, ...<br/>
+                    Read more ....
+                </a>
+            </article>
+        </div>
+        <div class="teaserbox">
+            <article>
+                <a href="news.html#news2">
+                    <h3>Artikel 2</h3>
+                    <img src="images/article.jpg" alt="Article 2"/>
+                    Lorem <em>ipsum</em> dolor sit amet, consetetur sadipscing elitr,
+                    sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
+                    aliquyam erat, sed diam voluptua. At vero eos et accusam et justo ...<br/>
+                    Read more ....
+                </a>
+            </article>
+        </div>
+        <div class="teaserbox">
+            <article>
+                <a href="news.html#news3">
+                    <h3>Artikel 3</h3>
+                    <img src="images/article.jpg" alt="Article 3"/>
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+                    diam nonumy eirmod tempor invidunt ut labore et dolore magna
+                    aliquyam erat, sed diam voluptua. At vero eos et accusam et justo...<br/>
+                    Read more ....
+                </a>
+            </article>
+        </div>
     </section>
 
     <aside class="page-sidebar">
@@ -113,8 +103,10 @@
     <p>
         &copy; Webdesign &amp; -prgorammierung &amp;
     </p>
-    <a id="print" class="print-link" href="#" onclick="window.print();return false;"/>
-    <a id="email" class="email-link" href="#" onclick="mailto:test@test.at"/>
+
+    <div class=".link-container">
+        <a id="print" class="print-link" href="#" onclick="window.print();return false;"></a>
+        <a id="email" class="email-link" href="mailto:test@test.at"></a></div>
 </footer>
 </body>
 </html>
