--- a/Semester-3/20141123_hands_on/webstorm_project/infos.html
+++ b/Semester-3/20141123_hands_on/webstorm_project/infos.html
@@ -48,12 +48,15 @@
 
 <div class="page-main-area">
     <section class="page-content">
-        <table border="1" class="bier-table">
+        <h2>Info</h2>
+        <table class="bier-table">
             <thead>
-            <th>Biersorte</th>
-            <th>Herstellungsort</th>
-            <th>Brauerei</th>
-            <th>Alkoholgehalt (%)</th>
+            <tr>
+                <th>Biersorte</th>
+                <th>Herstellungsort</th>
+                <th>Brauerei</th>
+                <th>Alkoholgehalt (%)</th>
+            </tr>
             </thead>
             <tbody>
             <tr>
