--- a/Semester-3/20141123_hands_on/webstorm_project/news.html
+++ b/Semester-3/20141123_hands_on/webstorm_project/news.html
@@ -44,6 +44,7 @@
 
 <div class="page-main-area">
     <section class="page-content">
+        <h2>Artikel</h2>
         <article id="news1">
             <h3>Artikel 1</h3>
 
