--- a/Semester-3/20141206_hands_on/webstorm/GameCanvas/index.html
+++ b/Semester-3/20141206_hands_on/webstorm/GameCanvas/index.html
@@ -13,7 +13,7 @@
     <div id="game-controller-container">
         <button id="start">undefined</button>
     </div>
-    <div id="game-area-container">
+    <div id="game-area-container" style="z-index: -999">
         <canvas id="gamescreen" width="300" height="450" style="border: 1px solid black;"/>
     </div>
 </div>
