further development on geo loc
- Almost finished geo loc.
- all necessary stuff got implemented
- css missing

--- a/Semester-3/20150109_hands_on/webstorm/main.html
+++ b/Semester-3/20150109_hands_on/webstorm/main.html
@@ -6,12 +6,15 @@
     <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBt7ZWih3_mpR9Sleq3qQhDkqhwqhBNXNQ&libraries=places&v=3&sensor=true"></script>
     <script src="js/jquery-2.1.3.js"></script>
     <script src="js/geo.js"></script>
+    <link rel="stylesheet" href="css/geo.css">
     <title>Geo Location</title>
 </head>
 <body>
 <div id="errorContainer"></div>
 <div id="searchContainer"><input id="searchBox" type="text">
     <button id="searchCurrentLocationButton">currentLocation</button>
+    <button id="clearStorageButton">clear storage</button>
+    <button id="displayStorage">display storage</button>
 </div>
 <div id="resultContainer"></div>
 </body>
