--- a/Semester-3/20150109_hands_on/webstorm/main.html
+++ b/Semester-3/20150109_hands_on/webstorm/main.html
@@ -3,19 +3,19 @@
 <head lang="en">
     <meta charset="UTF-8">
     <!-- GOOGLE MAPS APIv3 experimental, 11/2014 -->
-    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBt7ZWih3_mpR9Sleq3qQhDkqhwqhBNXNQ&libraries=places&v=3&sensor=true"></script>
+    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBt7ZWih3_mpR9Sleq3qQhDkqhwqhBNXNQ&amp;libraries=places&amp;v=3&amp;sensor=true"></script>
     <script src="js/jquery-2.1.3.js"></script>
     <script src="js/geo.js"></script>
     <link rel="stylesheet" href="css/geo.css">
     <title>Geo Location</title>
 </head>
 <body>
-<div id="errorContainer"></div>
-<div id="searchContainer"><input id="searchBox" type="text">
+<div id="errorContainer" class="error-container"></div>
+<div id="searchContainer" class="search-container"><input id="searchBox" type="text">
     <button id="searchCurrentLocationButton">currentLocation</button>
     <button id="clearStorageButton">clear storage</button>
     <button id="displayStorage">display storage</button>
 </div>
-<div id="resultContainer"></div>
+<div id="resultContainer" class="result-container"></div>
 </body>
 </html>
