added submitted zip and little modifications

--- a/Semester-3/20150109_hands_on/webstorm/main.html
+++ b/Semester-3/20150109_hands_on/webstorm/main.html
@@ -12,7 +12,7 @@
 <body>
 <div id="errorContainer" class="error-container"></div>
 <div id="searchContainer" class="search-container"><input id="searchBox" type="text">
-    <button id="searchCurrentLocationButton">currentLocation</button>
+    <button id="searchCurrentLocationButton">current location</button>
     <button id="clearStorageButton">clear storage</button>
     <button id="displayStorage">display storage</button>
 </div>
