little modifications on on lab rpoject
- the rest webstorm workspace stuff

--- a/Semester-3/20150110_lab/webstorm/template.html
+++ b/Semester-3/20150110_lab/webstorm/template.html
@@ -130,8 +130,10 @@
             if (file.type.match(/image/)) {
                 var reader = new FileReader();
                 reader.onload = function (evt) {
+                    target.innerHTML = '<img draggable="false" alt="not available" src="' + evt.target.result + '"/>';
+                };
 
-                }
+                reader.readAsDataURL(file);
             } else {
                 alert("not a image");
             }
